--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "5.2.9",
     "@angular/router": "5.2.9",
     "core-js": "^2.4.1",
+    "ngx-bootstrap": "^2.0.3",
     "rxjs": "^5.5.7",
     "zone.js": "^0.8.20"
   },
