--- a/package.json
+++ b/package.json
@@ -12,47 +12,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.2",
-    "@angular/common": "6.0.2",
-    "@angular/compiler": "6.0.2",
-    "@angular/core": "6.0.2",
-    "@angular/forms": "6.0.2",
-    "@angular/http": "6.0.2",
-    "@angular/platform-browser": "6.0.2",
-    "@angular/platform-browser-dynamic": "6.0.2",
-    "@angular/router": "6.0.2",
-    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
-    "angular-calendar": "^0.25.2",
-    "core-js": "^2.4.1",
-    "ngx-bootstrap": "^2.0.3",
-    "ngx-pagination": "^3.1.1",
-    "rxjs": "^6.1.0",
-    "rxjs-compat": "^6.1.0",
-    "zone.js": "^0.8.26"
+    "@angular-devkit/build-angular": "^0.803.17",
+    "@angular/animations": "8.2.13",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "8.2.13",
+    "@angular/compiler": "8.2.13",
+    "@angular/core": "8.2.13",
+    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/forms": "8.2.13",
+    "@angular/google-maps": "^9.0.0-rc.0",
+    "@angular/http": "7.2.15",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "8.2.13",
+    "@angular/platform-browser-dynamic": "8.2.13",
+    "@angular/router": "8.2.13",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.2",
+    "angular-calendar": "^0.27.20",
+    "core-js": "^3.3.6",
+    "ngx-bootstrap": "^5.2.0",
+    "ngx-file-drop": "^8.0.8",
+    "ngx-pagination": "^4.1.0",
+    "ngx-spinner": "^8.0.3",
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.3",
-    "@angular/cli": "6.0.3",
-    "@angular/compiler-cli": "6.0.2",
-    "@angular/language-service": "6.0.2",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
+    "@angular/cli": "^8.3.17",
+    "@angular/compiler-cli": "8.2.13",
+    "@angular/language-service": "8.2.13",
+    "@types/jasmine": "~3.4.4",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~12.12.3",
+    "codelyzer": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "jasmine-core": "~2.8.0",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "2.7.2",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4"
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.4.1",
+    "tslint": "~5.20.0",
+    "typescript": "^3.5.3",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
