enhance inv show page

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.803.19",
+    "@angular-devkit/build-angular": "^0.803.20",
     "@angular/animations": "8.2.13",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "8.2.13",
@@ -26,9 +26,11 @@
     "@angular/platform-browser": "8.2.13",
     "@angular/platform-browser-dynamic": "8.2.13",
     "@angular/router": "8.2.13",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.2",
-    "angular-calendar": "^0.27.20",
-    "core-js": "^3.3.6",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "@types/crypto-js": "^3.1.43",
+    "angular-calendar": "^0.27.21",
+    "core-js": "^3.4.7",
+    "crypto-js": "^3.1.9-1",
     "ngx-bootstrap": "^5.2.0",
     "ngx-file-drop": "^8.0.8",
     "ngx-pagination": "^4.1.0",
@@ -38,24 +40,24 @@
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular/cli": "^8.3.19",
+    "@angular/cli": "^8.3.20",
     "@angular/compiler-cli": "8.2.13",
     "@angular/language-service": "8.2.13",
-    "@types/jasmine": "~3.4.4",
+    "@types/jasmine": "^3.4.6",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "~12.12.3",
+    "@types/node": "^12.12.14",
     "codelyzer": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.2",
     "ts-node": "~8.4.1",
-    "tslint": "~5.20.0",
+    "tslint": "^5.20.1",
     "typescript": "^3.5.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
