--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^3.4.7",
     "crypto-js": "^3.1.9-1",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-clipboard": "^12.3.0",
     "ngx-file-drop": "^8.0.8",
     "ngx-pagination": "^4.1.0",
     "ngx-spinner": "^8.0.3",
