--- a/package.json
+++ b/package.json
@@ -28,16 +28,24 @@
     "@angular/router": "8.2.13",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "@types/crypto-js": "^3.1.43",
+    "@types/hammerjs": "^2.0.36",
     "angular-calendar": "^0.27.21",
     "core-js": "^3.4.7",
     "crypto-js": "^3.1.9-1",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular": "^8.2.13",
+    "jszip": "^3.1.5",
+    "minireset.css": "~0.0.4",
     "ngx-bootstrap": "^5.2.0",
     "ngx-clipboard": "^12.3.0",
     "ngx-file-drop": "^8.0.8",
     "ngx-pagination": "^4.1.0",
     "ngx-spinner": "^8.0.3",
+    "resize-observer-polyfill": "^1.5.1",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
+    "tslib": "^1.9.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
@@ -49,6 +57,7 @@
     "@types/node": "^12.12.14",
     "codelyzer": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "igniteui-cli": "~4.2.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
