--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "angular-calendar": "^0.27.21",
     "core-js": "^3.4.7",
     "crypto-js": "^3.1.9-1",
+    "date-fns": "^2.8.1",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^8.2.13",
     "jszip": "^3.1.5",
