--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "crypto-js": "^3.1.9-1",
     "date-fns": "^2.9.0",
     "hammerjs": "^2.0.8",
+    "html2canvas": "^1.0.0-rc.5",
     "igniteui-angular": "^8.2.17",
     "jszip": "^3.1.5",
     "minireset.css": "~0.0.4",
