--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "core-js": "^3.6.4",
     "crypto-js": "^3.1.9-1",
     "date-fns": "^2.9.0",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-rc.5",
     "igniteui-angular": "^8.2.17",
@@ -48,6 +49,7 @@
     "rxjs-compat": "^6.5.4",
     "tslib": "^1.10.0",
     "web-animations-js": "^2.3.2",
+    "xlsx": "^0.15.6",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
